调整为使用CsvTemplate与CsvDetail分别作为csv信息的参考与csv信息的存储；新增AOICsvTemplate与WaferMapException；调整csv处理工具类进行csv处理的方式

--- a/DrawWaferMapApp/DrawWaferMapApp.csproj
+++ b/DrawWaferMapApp/DrawWaferMapApp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Common\CsvDetail.cs" />
     <Compile Include="Common\CsvTemplate.cs" />
     <Compile Include="Common\TestCsvDetails\AOICsvDetail.cs" />
+    <Compile Include="Common\TestCsvTemplate\AOICsvTemplate.cs" />
     <Compile Include="Controls\MiniWaferMap.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -72,6 +73,7 @@
       <DependentUpon>WaferMap.cs</DependentUpon>
     </Compile>
     <Compile Include="Exceptions\CsvProcessException.cs" />
+    <Compile Include="Exceptions\WaferMapException.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
