--- a/DrawWaferMapApp/DrawWaferMapApp.csproj
+++ b/DrawWaferMapApp/DrawWaferMapApp.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\CsvProcessTool.cs" />
+    <Compile Include="Tools\TestCsvTools\AOICsvProcessTool.cs" />
     <Compile Include="WaferMapDisplayForm.cs">
       <SubType>Form</SubType>
     </Compile>
