【修改】实现迷你晶圆图功能；删除了CsvProcessTool中的无用方法，并调整了一些结构；

--- a/DrawWaferMapApp/DrawWaferMapApp.csproj
+++ b/DrawWaferMapApp/DrawWaferMapApp.csproj
@@ -90,6 +90,9 @@
     <Compile Include="WaferMapDisplayForm.Designer.cs">
       <DependentUpon>WaferMapDisplayForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Controls\MiniWaferMap.resx">
+      <DependentUpon>MiniWaferMap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\WaferMap.resx">
       <DependentUpon>WaferMap.cs</DependentUpon>
     </EmbeddedResource>
